# artic

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  proposal.md
.github/workflows/: build_and_test.yml
cmake/: artic-config.cmake.in
doc/: coding_style.md  implicits.md  index.md  main.md  pattern_matching.md  project_structure.md
include/artic/: arena.h  array.h  ast.h  bind.h  cast.h  check.h  cycl.h  emit.h  hash.h  lexer.h  loc.h  locator.h  log.h  parser.h  preamble.h  prelude.h  print.h  summoner.h  symbol.h  token.h  types.h
include/artic/ir/: module.h  node.h
libraries/: operators.art  order.art  utils.art
src/: CMakeLists.txt  arena.cpp  artic.h  ast.cpp  ast.h  begin_dsl.h  bind.cpp  bind.h  bind_names.cpp  bind_names.h  box.h  cast.h  check.cpp  check.h  common.h  cyclomatic.cpp  emit.cpp  emit.h  emit_thorin.cpp  end_dsl.h  eval.cpp  hash.h  infer.cpp  infer.h  ir.h  ir_builder.h  irbuilder.h  lang.h  lexer.cpp  lexer.h  loc.h  locator.h  log.cpp  log.h  main.cpp  parse.cpp  parser.cpp  parser.h  print.cpp  print.h  (+14 more)
src/ir/: module.cpp  node.cpp
test/: CMakeLists.txt  run_codegen_test.cmake
test/check/valid/: loops.art  types.art
test/codegen/: aobench.art  aobench.ref  basic0.art  basic1.art  basic2.art  basic3.art  compare.art  fannkuch.art  fannkuch.ref  helpers.c  mandelbrot.art  mandelbrot.ref  meteor.art  shapes.art  shapes.ref
test/failure/: addrspace.art  annot.art  arrays.art  arrays_wrong_size.art  asm.art  attrs.art  basic_ops.art  cast1.art  cast2.art  cc.art  char.art  control_flow_filter.art  double_at_sign_werror.art  enums1.art  enums3.art  enums4.art  enums_invalid_types.art  escape.art  filter2.art  filter_without_body_werror.art  if.art  if_let.art  impl_diff_mod1.art  impl_diff_mod2.art  impl_nested.art  impl_overlap.art  impl_overlap2.art  implicit1.art  implicit2.art  implicit3.art  infer_incompatible_type_args.art  infer_incompatible_type_args_subtyping.art  invalid_casts.art  invalid_filter.art  invalid_struct_values.art  literals.art  match.art  match1.art  match2.art  match_invalid_types.art  (+70 more)
test/infer/valid/: addr.art  btree.art  const.art  id.art  pow.art  prelude.art  rec.art  struct.art  trait.art
test/invalid/: bind.art  char.art  comment.art  enums2.art  noret.art  params.art  rec.art  return.art  similar.art  string.art  structs1.art  structs2.art  uninferable.art  unreachable.art  utf8.art
test/parse/valid/: fn.art  for.art  if.art  literals.art  types.art  while.art
test/simple/: address.art  addrspace.art  all_def_ops.art  arrays.art  arrays1.art  arrays3.art  asm.art  basic_filters.art  basic_traits.art  cc.art  church.art  collection.art  compare.art  custom_literals.art  default_impl.art  double_ptr.art  enums1.art  enums2.art  enums5.art  escape.art  filters1.art  filters2.art  generic_traits1.art  generic_traits2.art  hash.art  hash1.art  hash2.art  if.art  if_let.art  impl.art  impl_tuple.art  impl_where.art  implicit1.art  implicit2.art  implicit3.art  implicit4.art  implicit5.art  implicit6.art  implicit7.art  int_wrapper.art  (+63 more)
test/thorin/: CMakeLists.txt  busted_scheduler.art  closure_conv_allocated_env.art  closure_conv_capture1.art  closure_conv_capture2.art  closure_conv_capture3.art  closure_conv_capture4.art  closure_conv_capture_bb.art  closure_conv_capture_top_level.art  closure_conv_empty_env.art  closure_conv_no_op.art  closure_conv_rec.art  closure_conv_rec2.art  closure_conv_thin_env.art  control_flow.art  hello_world.art  lift_non_inlineable_loop.art  lift_range_body.art  lift_two_ranges.art  llvm_intrinsic.art  nested_fn1.art  oracle.cmake  parallel_basic.art  parallel_functions1.art  parallel_functions2.art  parallel_functions3.art  parallel_test.c  range_loop1.art  range_loop2.art  range_loop3.art  slot.art  spirv_builtin.art  tail_rec_elimination.art  test.art
test/valid/: address.art  array.art  arrays1.art  arrays2.art  church.art  church_numerals.art  comments.art  enums1.art  enums2.art  enums3.art  filters1.art  filters2.art  fn.art  for.art  if.art  literals.art  match.art  mod.art  mut.art  nested_fns.art  ops.art  poly_fn.art  ref.art  regex.art  regular_expressions.art  sort.art  sort_nets.art  sorting_networks.art  static.art  string.art  struct.art  structs1.art  structs2.art  structs3.art  structs4.art  trait.art  types.art
